# -

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  version1.cpp
src/Dxx_tool_v0.1/: CMakeLists.txt  Core.cpp  Core.h  Entrypoint.cpp
src/Dxx_tool_v0.2/: CMakeLists.txt  Core.cpp  Core.h  Dxx_tool_v0.2_zh_CN.ts  Entrypoint.cpp  Filemanagement.cpp  Filemanagement.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Dxx_tool_v1.0/: 思路.txt
src/Test/: CMakeLists.txt  version1.cpp
vendors/OpenXLSX/: CMakeLists.txt
vendors/OpenXLSX/Documentation/: CMakeLists.txt  Doxyfile
vendors/OpenXLSX/Documentation/html/: _i_zip_archive_8hpp_source.html  _x_l_cell_8hpp_source.html  _x_l_cell_iterator_8hpp_source.html  _x_l_cell_range_8hpp_source.html  _x_l_cell_reference_8hpp_source.html  _x_l_cell_value_8hpp_source.html  _x_l_color_8hpp_source.html  _x_l_column_8hpp_source.html  _x_l_command_query_8hpp_source.html  _x_l_constants_8hpp_source.html  _x_l_content_types_8hpp_source.html  _x_l_date_time_8hpp_source.html  _x_l_document_8hpp_source.html  _x_l_exception_8hpp_source.html  _x_l_formula_8hpp_source.html  _x_l_iterator_8hpp_source.html  _x_l_properties_8hpp_source.html  _x_l_relationships_8hpp_source.html  _x_l_row_8hpp_source.html  _x_l_row_data_8hpp_source.html  _x_l_shared_strings_8hpp_source.html  _x_l_sheet_8hpp_source.html  _x_l_workbook_8hpp_source.html  _x_l_xml_data_8hpp_source.html  _x_l_xml_file_8hpp_source.html  _x_l_xml_parser_8hpp_source.html  _x_l_zip_archive_8hpp_source.html  annotated.html  bug.html  class_open_x_l_s_x_1_1_i_zip_archive-members.html  class_open_x_l_s_x_1_1_i_zip_archive.html  class_open_x_l_s_x_1_1_x_l_app_properties-members.html  class_open_x_l_s_x_1_1_x_l_app_properties.html  class_open_x_l_s_x_1_1_x_l_cell-members.html  class_open_x_l_s_x_1_1_x_l_cell.html  class_open_x_l_s_x_1_1_x_l_cell_address_error-members.html  class_open_x_l_s_x_1_1_x_l_cell_address_error.html  class_open_x_l_s_x_1_1_x_l_cell_iterator-members.html  class_open_x_l_s_x_1_1_x_l_cell_iterator.html  class_open_x_l_s_x_1_1_x_l_cell_range-members.html  (+137 more)
vendors/OpenXLSX/Documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_13.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_d.js  functions_f.js  related_0.js  searchdata.js  variables_0.js
vendors/OpenXLSX/Documentation/latex/: _i_zip_archive_8hpp_source.tex  _x_l_cell_8hpp_source.tex  _x_l_cell_iterator_8hpp_source.tex  _x_l_cell_range_8hpp_source.tex  _x_l_cell_reference_8hpp_source.tex  _x_l_cell_value_8hpp_source.tex  _x_l_color_8hpp_source.tex  _x_l_column_8hpp_source.tex  _x_l_command_query_8hpp_source.tex  _x_l_constants_8hpp_source.tex  _x_l_content_types_8hpp_source.tex  _x_l_date_time_8hpp_source.tex  _x_l_document_8hpp_source.tex  _x_l_exception_8hpp_source.tex  _x_l_formula_8hpp_source.tex  _x_l_iterator_8hpp_source.tex  _x_l_properties_8hpp_source.tex  _x_l_relationships_8hpp_source.tex  _x_l_row_8hpp_source.tex  _x_l_row_data_8hpp_source.tex  _x_l_shared_strings_8hpp_source.tex  _x_l_sheet_8hpp_source.tex  _x_l_workbook_8hpp_source.tex  _x_l_xml_data_8hpp_source.tex  _x_l_xml_file_8hpp_source.tex  _x_l_xml_parser_8hpp_source.tex  _x_l_zip_archive_8hpp_source.tex  annotated.tex  bug.tex  class_open_x_l_s_x_1_1_i_zip_archive.tex  class_open_x_l_s_x_1_1_x_l_app_properties.eps  class_open_x_l_s_x_1_1_x_l_app_properties.tex  class_open_x_l_s_x_1_1_x_l_cell.tex  class_open_x_l_s_x_1_1_x_l_cell_address_error.eps  class_open_x_l_s_x_1_1_x_l_cell_address_error.tex  class_open_x_l_s_x_1_1_x_l_cell_iterator.tex  class_open_x_l_s_x_1_1_x_l_cell_range.tex  class_open_x_l_s_x_1_1_x_l_cell_reference.tex  class_open_x_l_s_x_1_1_x_l_cell_value.tex  class_open_x_l_s_x_1_1_x_l_cell_value_proxy.tex  (+61 more)
vendors/OpenXLSX/Examples/: CMakeLists.txt  Demo2.cpp  Demo5.cpp
vendors/QT/cmake/Qt5Gui/: Qt5GuiConfig.cmake
vendors/QT/cmake/Qt5VulkanSupport/: Qt5VulkanSupportConfig.cmake
vendors/libzip-main/: CMakeLists.txt
